# bili-transcript

./: .gitignore  LICENSE  README.md  pyproject.toml
.skills/fetching-bilibili-transcripts/: SKILL.md
.skills/fetching-bilibili-transcripts/references/: cli-reference.md
output/: 这才是正确的定投补仓方法。看完这个，你就会定投补仓了。.json  这才是正确的定投补仓方法。看完这个，你就会定投补仓了。.srt  这才是正确的定投补仓方法。看完这个，你就会定投补仓了。.txt
src/bili_transcript/: __init__.py  cli.py  config.py  exporters.py  fetcher.py  models.py  transcriber.py  utils.py
tests/: test_exporters.py  test_utils.py
